[package]
name = "rupamix"
version = "0.2.5"
edition = "2021"
authors = ["Paulo Guimaraes"]
description = "Rust PA Mixer is a cli tool for interfacing with Pulse Audio"
license-file = "LICENSE"
repository = "https://github.com/fitpaulo/rupamix"
keywords = ["pulse", "audio", "pulseaudio", "cli", "mixer"]
categories = ["command-line-utilities", "os::linux-apis", "os::unix-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
pulse = {version = "2.28.1", package = "libpulse-binding"}
