[package]
name = "rupamix"
version = "0.3.0"
edition = "2021"
authors = ["Paulo Guimaraes"]
description = "Rust PA Mixer is a cli tool for interfacing with Pulse Audio"
license-file = "LICENSE"
repository = "https://github.com/fitpaulo/rupamix"
keywords = ["pulse", "audio", "pulseaudio", "cli", "mixer"]
categories = ["command-line-utilities", "os::linux-apis", "os::unix-apis"]

[profile.optimized]
inherits = "release"
codegen-units = 1
strip = true
lto = "fat"
opt-level = "z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
pulse = {version = "2.28.1", package = "libpulse-binding"}
